syntax = "proto3";
package pb;

import "user.int.proto";

message SignInReq {
    string phone_number = 1;
    string code = 2;
    int64 device_id = 3;
}
message SignInResp {
    int64 user_id = 1;
    string token = 2;
}

message UpdateUserReq {
    string nickname = 1; // 昵称
    int32 sex = 2; // 性别
    string avatar_url = 3; // 头像地址
    string extra = 4; // 附加字段
}
message UpdateUserResp {

}

service UserExt {
    // 登录
    rpc SignIn (SignInReq) returns (SignInResp);
    // 获取用户信息
    rpc GetUser (GetUserReq) returns (GetUserResp);
    // 更新用户信息
    rpc UpdateUser (UpdateUserReq) returns (UpdateUserResp);
}